@@ -1,3 +1,8 @@
+2006-09-08  Andreas Kupries  <andreask@activestate.com>
+
+	* unix/tclUnixCompat.c: Fixed conditions for CopyArray/CopyString,
+	  and CopyHostent. Also fixed bad var names in TclpGetHostByName.
+
 2006-09-07  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
 
 	* unix/tclUnixCompat.c: Added fallback to MT-unsafe
